# llm-experiments

./: README.md  pyproject.toml
llm/: .main.py.swp  main.py
llm/utils/: config.py
tests/: test_llm.py
ui-experiments/: package-lock.json  package.json
ui-experiments/src/: app.css  store.ts  taskData.ts
ui-experiments/src/lib/: MsgBubble.svelte  TaskCard.svelte
ui-experiments/src/routes/: +layout.svelte  +page.svelte
ui-experiments/src/routes/asar/: +page.svelte
ui-experiments/src/routes/increment/: +page.svelte
ui-experiments/src/routes/saturn/: +page.svelte
ui-experiments/src/routes/textarea++/: +page.svelte
